--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <section id="sobrenos">
         <h2>Sobre Nós</h2>
         <p>Bem-vindo à Sollar Conexões! Aqui, acreditamos que a energia do sol pode transformar vidas. Nossa missão é levar soluções acessíveis e eficientes em energia fotovoltaica para pequenos fazendeiros que desejam se libertar das altas contas de luz e investir em um futuro sustentável.</p>
-        <p>Com um <span class="negrito">atendimento personalizado</span> e <span class="negrito"><a href="#interesse" title="Dê uma olhada em nossos produtos!">produtos de alta qualidade</a></span>, ajudamos você a reduzir custos e a aproveitar o máximo do potencial solar da sua propriedade. Seja para irrigar suas plantações, alimentar seu maquinário ou iluminar sua casa, temos a solução ideal para suas necessidades.</p>
+        <p>Com um <span class="negrito">atendimento personalizado</span> e <span class="linkexplicar"><a href="#interesse" title="Dê uma olhada em nossos produtos!">produtos de alta qualidade</a></span>, ajudamos você a reduzir custos e a aproveitar o máximo do potencial solar da sua propriedade. Seja para irrigar suas plantações, alimentar seu maquinário ou iluminar sua casa, temos a solução ideal para suas necessidades.</p>
         <p>Descubra como é simples produzir sua própria energia limpa e dar mais autonomia ao seu negócio. Vamos juntos conectar você ao poder do sol!</p>
     </section>
 
